force-app/main/default/objects/NotionSyncObject__mdt/NotionSyncObject__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Salesforce objects to sync with Notion</description>
    <label>Notion Sync Object</label>
    <pluralLabel>Notion Sync Objects</pluralLabel>
</CustomObject>