force-app/main/default/objects/NotionSyncObject__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable sync for this object</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>