force-app/main/default/objects/NotionSyncObject__mdt/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this configuration has been soft deleted</description>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>