force-app/main/default/objects/NotionSyncObject__mdt/fields/NotionDatabaseId__c.field-meta.xml
<CustomField>
    <fullName>NotionDatabaseId__c</fullName>
    <description>ID of the target Notion database</description>
    <label>Notion Database ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>