force-app/main/default/objects/NotionSyncObject__mdt/fields/SalesforceIdPropertyName__c.field-meta.xml
<CustomField>
    <fullName>SalesforceIdPropertyName__c</fullName>
    <description>Name of the Notion property that stores the Salesforce record ID</description>
    <label>Salesforce ID Property Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>